# crab-talk

./: Cargo.toml  Makefile  README.md  build.rs  scripts.txt
crab-talk-client/: Cargo.toml
crab-talk-client/src/: main.rs
crab-talk-proto/: Cargo.toml  README.md  build.rs
crab-talk-proto/proto/: user.proto
crab-talk-proto/src/: lib.rs
crab-talk-server/: Cargo.toml  README.md
crab-talk-server/src/: main.rs  telemetry.rs  user_service.rs
scripts/: run_g_rpc.sh
src/: lib.rs  main.rs
src/g_rpc/: client.rs  mod.rs  server.rs  user_service.rs
src/g_rpc/proto/: user.proto
