[package]
name = "crab-talk"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
user = "0.1.1"

[build-dependencies]
tonic-prost-build = "0.14.3"

[[bin]]
name = "server"
path = "src/g_rpc/server.rs"

[[bin]]
name = "client"
path = "src/g_rpc/client.rs"
