[package]
name = "crab-talk-server"
version.workspace = true
edition.workspace = true

[dependencies]
tonic = "0.14"
tokio = { version = "1.49", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"

opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }

crab-talk-proto = { path = "../crab-talk-proto" }
http = "1.4.0"
